--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Closures</title>
   </head>
   <body>
+    <h1>Closures</h1>
     <script src="closures.js"></script>
   </body>
 </html>
